--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,3 +10,13 @@
 .pointer{
     cursor: pointer;
 }
+.collection-title{
+    font-size: 30px;
+    color: #1c1c1c;
+    margin-bottom: 32px;
+    font-weight: 600;
+}
+.slick-next:before,
+.slick-prev:before{
+    color: var(--gray);
+}
