--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -1,5 +1,5 @@
 .tabs{
-    box-shadow: var(--border-white) 0px -5px 0px inset;
+    /* box-shadow: var(--border-white) 0px -5px 0px inset; */
 }
 .options-wrapper{
     display: flex;
