--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -7,4 +7,8 @@
     --gray : rgb(207,207,207);
     --inactive-text : #696969;
     --inactive-color : #f8f8f8;
+    --filter-text : #9c9c9c;
+    --tag-red : #d92662;
+    --tag-blue : #256fef;
+    --tag-green : #267e3e;
 }
